# phishforge-api

./: README.md  docker-compose.yml  pyproject.toml  upload_book.py
app/: main.py
app/api/: router.py
app/api/v1/endpoints/: generator.py
app/core/: config.py
app/domain/models/: phishing_email.py
app/domain/services/: document_processor.py  response_generator.py  retriever.py
app/dto/: query.py
app/infrastructure/qdrant/: store.py
