[tool.poetry]
name = "phishforge-api"
version = "0.1.0"
description = ""
authors = ["Logan Cardoso <logan.cc@outlook.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
qdrant-client = "^1.13.2"
sentence-transformers = "^3.4.1"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
